objects/ContentVersion/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>125</length>
    <type>Text</type>
</CustomField>