objects/ContentVersion/fields/DocumentCategory__c.field-meta.xml
<CustomField>
    <fullName>DocumentCategory__c</fullName>
    <label>Categoría de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DocumentoInternoDeGestion</fullName>
                <label>Documento Interno de Gestión</label>
            </value>
            <value>
                <fullName>FormulariosYAvalesFilenet</fullName>
                <label>Formularios y Avales – Filenet</label>
            </value>
            <value>
                <fullName>DocumentoParaCliente</fullName>
                <label>Documento para Cliente</label>
            </value>
            <value>
                <fullName>DocumentoDeAgente</fullName>
                <label>Documento de agente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>