objects/ContentVersion/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1) ACTA DESIGNANDO AUTORIDADES</fullName>
            </value>
            <value>
                <fullName>2) BALANCE/SITUACIÓN ECONÓMICA</fullName>
            </value>
            <value>
                <fullName>3) COPIA DEL DNI</fullName>
            </value>
            <value>
                <fullName>4) ESTATUTO/REGLAMENTO/CONTRATO</fullName>
            </value>
            <value>
                <fullName>5) DDJJ UNIFICADA (LAVADO+PEP)</fullName>
            </value>
            <value>
                <fullName>6) ACTA DESIGNACIÓN RTE.LEGAL/APOD./AUTOR</fullName>
            </value>
            <value>
                <fullName>7) COPIA DE REGISTRO DE ACCIONES</fullName>
            </value>
            <value>
                <fullName>9) SUJETO OBLIGADO</fullName>
            </value>
            <value>
                <fullName>10) DOC ESPECIAL</fullName>
            </value>
            <value>
                <fullName>11) FIRMAS</fullName>
            </value>
            <value>
                <fullName>12) DECLARACION A E I</fullName>
            </value>
            <value>
                <fullName>13) FORMULARIO FATCA</fullName>
            </value>
            <value>
                <fullName>14) UW MEDICO</fullName>
            </value>
            <value>
                <fullName>15) UW LAVADO DE DINERO</fullName>
            </value>
            <value>
                <fullName>19) CARTAS CLIENTE</fullName>
            </value>
            <value>
                <fullName>20) SOLICITUD</fullName>
            </value>
            <value>
                <fullName>24) OTROS</fullName>
            </value>
            <value>
                <fullName>25) FORMULARIO GDTR</fullName>
            </value>
            <value>
                <fullName>01-Form Alta (PAS–Mger/TL-ECU)</fullName>
            </value>
            <value>
                <fullName>02-Fotocopia DNI</fullName>
            </value>
            <value>
                <fullName>02-Foto 4 x 4</fullName>
            </value>
            <value>
                <fullName>03-Fotocopia DNI</fullName>
            </value>
            <value>
                <fullName>03-Estatuto</fullName>
            </value>
            <value>
                <fullName>04-AFIP: Constancia Inscrip.</fullName>
            </value>
            <value>
                <fullName>04-Acta distribución Cargos</fullName>
            </value>
            <value>
                <fullName>05-IIBB / Conv.Multilateral</fullName>
            </value>
            <value>
                <fullName>05-Identificación Benef. Final</fullName>
            </value>
            <value>
                <fullName>06-Credencial CIPAS</fullName>
            </value>
            <value>
                <fullName>06-AFIP: Constancia Inscrip.</fullName>
            </value>
            <value>
                <fullName>07-Certificación Domicilio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>